# tus-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  justfile  setup.sh  start.sh  stop.sh
.claude/: settings.json
dashboard-ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard-ui/src/: app.html
dashboard-ui/src/lib/: api.ts  session.svelte.ts  types.ts
dashboard-ui/src/routes/: +layout.svelte  +page.svelte
dashboard-ui/src/routes/audit/: +page.svelte
dashboard-ui/src/routes/contexts/: +page.svelte
dashboard-ui/src/routes/dashboard/: +page.svelte
dashboard-ui/src/routes/health/: +page.svelte
dashboard-ui/src/routes/login/: +page.svelte
dashboard-ui/src/routes/metrics/: +page.svelte
dashboard-ui/src/routes/settings/: +page.svelte
dashboard-ui/src/routes/uploads/[id]/: +page.svelte
dashboard-ui/src/routes/users/: +page.svelte
dashboard-ui/src/routes/webhooks/: +page.svelte
docs/: processing.md
migrations/: 001_initial.sql  002_webhooks.sql  003_tus_extensions.sql  004_audit_log.sql  005_settings.sql  006_users.sql  007_oidc.sql  008_contexts.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: tuskar.json
monitoring/grafana/provisioning/dashboards/: tuskar.yml
src/: app_state.rs  audit.rs  auth.rs  config.rs  context.rs  login_throttle.rs  main.rs  metrics.rs  rate_limit.rs  security_headers.rs  trusted_proxy.rs
src/dashboard/: context_handlers.rs  handlers.rs  mod.rs  oidc.rs  routes.rs  session.rs  sse.rs  user_handlers.rs
src/manager/: av_scan.rs  cleanup.rs  mime_filter.rs  mod.rs  processor.rs  worker.rs
src/tus/: error.rs  handlers.rs  metadata.rs  mod.rs  model.rs  repository.rs  routes.rs  s3_storage.rs  service.rs  storage.rs
src/webhook/: dispatcher.rs  mod.rs  model.rs  repository.rs  validation.rs
