[package]
name = "tus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum              = { version = "0.8", features = ["macros"] }
tokio             = { version = "1",   features = ["full"] }
tower             = "0.5"
tower-http        = { version = "0.6", features = ["fs", "cors", "trace", "request-id"] }

sqlx              = { version = "0.8", features = [
                      "sqlite", "runtime-tokio", "uuid", "chrono", "migrate"
                  ] }

serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
base64            = "0.22"

thiserror         = "2"
anyhow            = "1"

tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

async-trait       = "0.1"
tokio-stream      = { version = "0.1", features = ["sync"] }
tokio-util        = { version = "0.7", features = ["io"] }
futures           = "0.3"
libc              = "0.2"
http-body-util    = "0.1"

dotenvy           = "0.15"
reqwest           = { version = "0.12", features = ["json", "stream"] }
hmac              = "0.12"
sha1              = "0.10"
sha2              = "0.10"
hex               = "0.4"
subtle            = "2"
prometheus-client = "0.22"
infer             = "0.16"
bcrypt            = "0.15"
governor          = { version = "0.6", features = ["dashmap"] }
ipnet             = "2"
aws-config        = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3        = "1"
openidconnect = { version = "4.0.1", features = ["reqwest"] }

[dev-dependencies]
tempfile          = "3"
